# FastAPI-Template

./: .gitignore  example.env  main.py  pyproject.toml  requirements.txt
app/: __init__.py  app_factory.py  app_lifespan.py
app/api/: __init__.py  dependencies.py  routers.py
app/api/endpoints/: __init__.py  auth.py  user.py
app/core/: __init__.py  config.py  logger.py  security.py
app/database/: __init__.py  mongodb_con.py  mongodb_connet.py
app/enums/: __init__.py  status_code.py
app/exceptions/: __init__.py  base.py  custom.py  error_code.py  exceptions.py  handlers.py
app/middleware/: __init__.py  logging.py
app/models/: __init__.py  base.py  user.py  user_model.py
app/repositories/: __init__.py  user_repo.py
app/schemas/: __init__.py  pagination.py  response.py  security.py
app/schemas/request/: __init__.py  auth.py  request_info.py  user.py
app/schemas/response/: __init__.py  auth.py  base.py  user.py
app/services/: __init__.py  auth_service.py  user.py  user_service.py
app/utils/: __init__.py  date_util.py  encrypt_util.py  request_util.py  serialization_util.py  user_id_util.py  validation_util.py
